# yray

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
dag/: api.py  context.py  node.py  pipeline.py  task.py
examples/: example_ml_training.py  example_pipeline.py  local_pipeline.py  ray_pipeline.py
executors/: base.py  engine.py  plan.py  ray_executor.py
src/xray/: __init__.py
src/xray/dag/: context.py  node.py  pipeline.py
src/xray/executors/: base.py  engine.py  local_executor.py  ray_executor.py
src/yray/: __init__.py
src/yray/dag/: pipeline.py
src/yray/executors/: base.py  engine.py  local_executor.py  plan.py  ray_executor.py
tests/: test_pipeline.py
